data/forge_javadoc/1.7.10/raw/net/minecraft/client/renderer/texture/TextureUtil.md
---
title: "TextureUtil"
description: "public class TextureUtil extends java.lang.Object"
package: "net/minecraft/client/renderer/texture"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/renderer/texture/TextureUtil.html"
sourceType: javadoc
---

# TextureUtil

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.texture.TextureUtil

## Class signature

```java
public class TextureUtil extends java.lang.Object
```

## Constructors

- `TextureUtil()`

## Methods

- `static void allocateTexture(int p_110991_0_, int p_110991_1_, int p_110991_2_)`
- `static void allocateTextureImpl(int p_147946_0_, int p_147946_1_, int p_147946_2_, int p_147946_3_, float p_147946_4_)`
- `static void deleteTexture(int p_147942_0_)`
- `static void func_147945_b()`
- `static void func_147953_a(int[] p_147953_0_, int p_147953_1_, int p_147953_2_)`
- `static void func_152777_a(boolean p_152777_0_, boolean p_152777_1_, float p_152777_2_)`
- `static int[][] generateMipmapData(int p_147949_0_, int p_147949_1_, int[][] p_147949_2_)`
- `static int glGenTextures()`
- `static int[] prepareAnisotropicData(int[] p_147948_0_, int p_147948_1_, int p_147948_2_, int p_147948_3_)`
- `static int[] readImageData(IResourceManager p_110986_0_, ResourceLocation p_110986_1_)`
- `static int[] updateAnaglyph(int[] p_110985_0_)`
- `static void uploadTexture(int p_110988_0_, int[] p_110988_1_, int p_110988_2_, int p_110988_3_)`
- `static int uploadTextureImage(int p_110987_0_, java.awt.image.BufferedImage p_110987_1_)`
- `static int uploadTextureImageAllocate(int p_110989_0_, java.awt.image.BufferedImage p_110989_1_, boolean p_110989_2_, boolean p_110989_3_)`
- `static int uploadTextureImageSub(int p_110995_0_, java.awt.image.BufferedImage p_110995_1_, int p_110995_2_, int p_110995_3_, boolean p_110995_4_, boolean p_110995_5_)`
- `static void uploadTextureMipmap(int[][] p_147955_0_, int p_147955_1_, int p_147955_2_, int p_147955_3_, int p_147955_4_, boolean p_147955_5_, boolean p_147955_6_)`

## Fields

- `static DynamicTexture missingTexture`
- `static int[] missingTextureData`
